fix z index issue on explore page header on mobile devices

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -262,7 +262,7 @@ input[type='number'] {
         position: fixed;
         top: 56px;
         bottom: 64px;
-        z-index: 2;
+        z-index: 99;
     }
     .swap-body {
         /* max-height: 86.5vh; */
